Cleaned code + refactored gateway security config